# test_task_precoro

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
src/data/fixtures/: load_fixtures.py  products.json
src/migrations/: env.py
src/migrations/versions/: 059ac0671158_auto.py  1731ebaed6e5_auto.py  939c7794cc19_auto.py  a4b722263183_auto.py  c9dd42d3d194_auto.py  f027e6a083d2_auto.py
src/test_task/application/: __init__.py  config.py  login.py  middleware.py  wsgi.py
src/test_task/application/shared/dependency_injection/: interfaces.py  services.py
src/test_task/interfaces/ssr/endpoints/: __init__.py  auth.py  cart.py  index.py  order.py  product.py
src/test_task/interfaces/ssr/forms/: auth.py
src/test_task/interfaces/ssr/templates/: base.html  cart.html  login.html  orders.html  products.html  register.html
src/test_task/persistence/models/: __init__.py  base.py  cart.py  order.py  product.py  user.py
src/test_task/persistence/repository/: abc.py  product.py  user.py
src/test_task/persistence/repository/cart/: cart.py  cart_item.py
src/test_task/persistence/repository/order/: order.py  order_item.py
src/test_task/persistence/uow/: cart.py  order.py  product.py  user.py
src/test_task/services/: abc.py
src/test_task/services/cart/: dto.py  entity.py
src/test_task/services/cart/get/: ports.py  (+1 more)
src/test_task/services/order/: dto.py
src/test_task/services/product/: dto.py
src/test_task/services/user/: hash.py  uuid.py
tools/alembic/: alembic.ini
tools/docker/: app.dockerfile
tools/fixtures/: load_fixtures.py
(+16 files in other folders)
